# AvitoProject

./: .env  .gitignore  IMPLEMENTATION_PLAN.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  BACKEND_READY.md  Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_users_org_id_nullable.py  0003_tasks_align_columns.py  0004_avito_account_department.py  0005_seed_default_role_permissions.py  0006_tasks_add_priority_status_due_date.py  0007_chat_messages_unique_avito_id.py  0008_candidates_vacancy_id.py  82af915d0331_auto_response_rules_new_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py  redis.py
backend/app/middleware/: org_access.py  request_id.py  tenant.py
backend/app/models/: __init__.py  audit.py  auth.py  avito.py  base.py  chat.py  crm.py  error_log.py  mailing.py  messaging.py  rbac.py  self_employed.py  task.py  (+1 more)
backend/scripts/: check_imports.py
desktop/: .dockerignore  .env.production  Dockerfile.web  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: auth.rs  mod.rs  notify.rs  window.rs
infra/nginx/: nginx.conf
infra/postgres/: postgresql.conf
infra/redis/: redis.conf
infra/scripts/: backup.sh  create_partitions.py
(+167 files in other folders)
